# ModelMetricUncertaintyResearch

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
docs/problem_definition/: main.tex  ref.bib
docs/source/: approaches.rst  conf.py  findings.rst  index.rst  introduction.rst  literature.rst  refs.bib
docs/sources_of_uncertainty/: Sources_of_performance_metric_uncertainty.tex  Sources_uncertainty.bib
mmur/: __init__.py
mmur/generators/: CM experiments.ipynb  __init__.py  algorithms.py  blob_generator.py  logistic_generator.py
mmur/methods/: __init__.py  single_run.py
mmur/metrics/: ellipses.py  sklearn_metrics.py
mmur/models/: __init__.py  base.py  beta_binomial.py  dirichlet_multinomial.py  independent_hm.py  lep.py
mmur/simulators/: __init__.py  lalgorithm.py
mmur/stan/: __init__.py  dirichlet_multinomial.stan  dirichlet_multinomial_multi.stan  independent_hm.stan
mmur/stats/: __init__.py
mmur/viz/: __init__.py  commons.py  dists.py  generators.py
notebooks/Coen experiments/: CM experiments.ipynb  single run methods.ipynb
notebooks/coen_experiments/: cm_experiments.ipynb  cm_experiments.py  single_run_methods.ipynb  single_run_methods_CIs.ipynb  stan_experiments.ipynb  stan_test.py
notebooks/comparison_of_packages/: model_confusion_matrix_package_comparison.ipynb
notebooks/models/: LinearErrorProb.ipynb  MultivariateNormalUncertainty.ipynb  model_confusion_matrix_dirichlet_multinomial.ipynb
notebooks/pr_ellipse_bayesian/: bayesian_approach_three_priors.ipynb
notebooks/pr_ellipse_validation/: ROC_curve.ipynb  (+11 more)
(+6 files in other folders)
