[metadata]
name = mmur
description = Compute uncertainties on classification models.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ralph Urlus
author_email = rurlus.dev@gmail.com
license = Apache-2
platforms = any
url = https://github.com/RUrlus/ModelMetricUncertainty
project_urls =
    Source  = https://github.com/RUrlus/ModelMetricUncertaintyResearch
    Tracker = https://github.com/RUrlus/ModelMetricUncertaintyResearch/issues
keywords = uncertainty classification metrics
classifiers =

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    arviz
    seaborn
    numpy>=1.0
    scipy>=1.5.2
    pandas>=0.25.1
    matplotlib>=2.2.3
    scikit-learn>=1.0
    pystan>=3.0
    nest_asyncio>=1.5
    httpstan>=4.2
    histogrammar

[options.extras_require]
test =
    pytest
all =
    %(test)s

[tool:pytest]
addopts = -rsxX -v
testpaths = tests
